2007-06-12  Sven Neumann  <sven@gimp.org>

	* app/base/boundary.c (simplify_subdivide): eliminate calls to sqrt().

2007-06-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-load.c: applied slightly modified patch from
	Eric Ross that adds support for loading long layer names from the
	extra layer data section (bug #445316).

2007-06-11  Sven Neumann  <sven@gimp.org>

	Applied patch from Zbigniew Chyla that further improves the
	boundary_sort() performance (bug #388538):

	* base/boundary.c (cmp_xy): use "y" coordinate as more significant
	one, i.e. compare (ay, ax) to (by, bx), not (ax, ay) to (bx, by).

	* configure.in: bumped version to 2.3.19.
	
2007-06-11  Sven Neumann  <sven@gimp.org>

	* Made 2.3.18 development release.

2007-06-11  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/common/raw.c (run): if load_image fails, return
	GIMP_PDB_EXECUTION_ERROR 

	* plug-ins/twain/twain.c (run): added missing ;

2007-06-11  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrenderer.c (gimp_view_renderer_init):
	initialize width and height to zero. Fixes bug #446005.

2007-06-11  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-preview.c: don't disable image previews when
	layer previews are disabled. We do not any longer create the image
	preview from the layer previews.

	* app/core/gimpimagefile.c
	* app/widgets/gimpthumbbox.c
	* tools/pdbgen/pdb/image.pdb: thumbnail rendering is not any
	longer disabled if layer previews are turned off.

	* app/config/gimprc-blurbs.h (THUMBNAIL_SIZE_BLURB): removed note
	that has become invalid by the change above.

	* app/core/gimpitem-preview.c: cosmetics.

	* app/pdb/image_cmds.c: regenerated.

2007-06-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/twain/twain.c (run): moved run_mode initialisation up a
	few lines.

	* app/tools/gimpscaletool.c: removed unused variable.

2007-06-11  Mukund Sivaraman  <muks@mukund.org>

	* configure.in: bumped required libexif version to 0.6.15. This