@@ -1,5 +1,10 @@
 2007-06-12  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/curve_bend.c: initialize the GtkAdjustment used
+	for the rotation angle; fixes bug #446681.
+
+2007-06-12  Sven Neumann  <sven@gimp.org>
+
 	* app/base/boundary.c (simplify_subdivide): eliminate calls to sqrt().
 
 2007-06-12  Sven Neumann  <sven@gimp.org>
